fabric/testdata/out/ing_fabric-event-scheduler-gateway-post-api-refeed-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/refeed\") \u0026\u0026 Method(\"POST\") \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\",
      \"users\") \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\",
      \"fmoloney\", \"https://identity.zalando.com/managed-id\", \"bmooney\", \"https://identity.zalando.com/managed-id\",
      \"cgallagher\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"eedb8509-1ee8-11e9-b78f-0a57a5a15272","deployment-id":"d-8dmn6j9jdg33ypaeqm2jv7v2d","pipeline-id":"l-26s8kqzdng1pty8usuum69sw4p"},"name":"fabric-event-scheduler-gateway-post-api-refeed-admins","namespace":"default"},"spec":{"rules":[{"host":"fabric-event-streams.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"fabric-event-scheduler","servicePort":"http"},"pa [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/refeed") && Method("POST")
      && JWTPayloadAllKV("https://identity.zalando.com/realm", "users") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "fmoloney", "https://identity.zalando.com/managed-id", "bmooney", "https://identity.zalando.com/managed-id",
      "cgallagher") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-17T13:45:46Z"
  generation: 2
  labels:
    controller-uid: eedb8509-1ee8-11e9-b78f-0a57a5a15272
    deployment-id: d-8dmn6j9jdg33ypaeqm2jv7v2d
    pipeline-id: l-26s8kqzdng1pty8usuum69sw4p
  name: fabric-event-scheduler-gateway-post-api-refeed-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: fabric-event-scheduler-gateway
    uid: eedb8509-1ee8-11e9-b78f-0a57a5a15272
  resourceVersion: "1357488645"
  uid: 35705193-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: fabric-event-streams.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: fabric-event-scheduler
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
